# MA-bench-framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  add_config.yaml  basic_config.yaml  basic_config_new.yaml  controller.py  create_report.py  eigen_bench.patch  eigenjob_perf.sh  eigenjob_time.sh  executor.py  job.sh  openmp_config.yaml  perf_solve.sh  perf_spmv.sh  perf_spmv_exclusive.sh  sketch.drawio  spmvbench.sh  testingcompare.ipynb
benchmark/: analysis.ipynb  benchmark.sh  create_bench_plan.ipynb  itertest.csv  itertest.sh  mtxgen.sh
benchmark/krylov/: analysis.ipynb  bench_plan.csv  benchmark.sh  benchmark_krylov.sh  create_bench_plan_krylov.ipynb  create_bench_plan_krylov.py  itertest.csv  itertest_krylov.csv  itertest_krylov.sh  itertest_linear.sh  krylov_analysis.ipynb  krylov_bench.sh
benchmark/spmv/: analysis copy.ipynb  analysis.ipynb  bench_plan.csv  bench_plan10.csv  benchmark.sh  benchmark_spmv.sh  create_bench_plan_spmv.ipynb  create_bench_plan_spmv.py  investigations.ipynb  itertest.csv  itertest.sh  itertest_spmv.sh  itertest_spmv10.csv  itertest_spmv15.csv  itertest_spmv5.csv  spmv_analysis.ipynb  spmv_bench.sh  testing.ipynb
benchmark/spmv_deep_analysis/: analysis copy 2.ipynb  analysis copy 3.ipynb  analysis copy.ipynb  analysis variance writedown copy.ipynb  analysis variance writedown.ipynb  analysis.ipynb  analysis_variance boost host.ipynb  bench_sda.sh  investigation.sh  investigation_single.sh  investigations.ipynb
benchmark/spmv_numa_investigation/: analysis.ipynb  investigation.sh  spmv_numa_analysis.ipynb
benchmark/spmv_v2/: bench_plan.csv  spmv_bench.sh
benchmark/stream/: analysis.ipynb  plot.ipynb  run_stream.sh  stream.out  stream_analysis.ipynb  stream_bench.sh  stream_results.csv
cachefit_testing/: clifftest.ipynb  clifftest.sh  clifftest2.sh  matgen_band.sh
eigen/: CMakeLists.txt  common.py  eigen.py  eigenjob.sh  eigenjob_c.sh  eigenjob_mpi.sh  eigenjob_perf.sh  eigenjob_time.sh  lanczos.out  lanczos.py  lanczos.time  lanczos_top_vecs.npy  matrix_sparse.npz  preprocess_matrix.py  rqi.out  rqi.py  rqi.time  simplejob.sh
eigen/experimental/: spectra_solver.cpp
eigen/src/: a.py  benchmark_analysis.ipynb  get_matrix.sh  lanczos.py  load_binary_matrix.h  load_matrix.py  main.cpp  preprocess_matrix.cpp  regularity.cpp  rqi.py  solve.cpp  solvers.hpp  spectra_omp.cpp  streamlit.py  util.h  util.hpp
eigen/src/analysis/: benchmark_analysis.ipynb
eigen/src_c/: load_binary_matrix.h  preprocess_matrix  preprocess_matrix.cpp  spectra_multi_solver  spectra_multi_solver.cpp  spectra_omp  spectra_omp.cpp  spectra_shift_solver  spectra_solver  spectra_solver.cpp  stress_test  stress_test.cpp  uproftester
experimental/: lanczos.py  load_matrix.py  lobpcg.py  rqi.py  uproftester.cpp
legacy/: analysisSPMVPREPRES.ipynb  benchmark_spmvPREPRES.sh  investigations.ipynb
legacy/cachefit_testing/: chrono.ipynb  clifftest.ipynb  clifftest.sh  clifftest2.ipynb  clifftest_chrono.sh  clifftest_perf.ipynb  clifftest_perf.sh  clifftest_synthgen.sh
legacy/experimental/: spectra_shift_solver.cpp
legacy/other_testing/: krylovbench.sh  matrix_generator.py  solve_with_davidson.cpp  spmv_firsttouch.cpp  spmv_likwid.cpp  spmvlikwid.sh  testingcompare.ipynb  vmcompare copy 2.ipynb  vmcompare copy 3.ipynb  vmcompare copy 4.ipynb  vmcompare copy 5.ipynb  vmcompare.ipynb
legacy/spmv/: bench_plan.csv  create_bench_plan_spmv.ipynb  itertest_72.csv  spmv_bench.sh
legacy/spmv_deep_analysis/: _a92a.csv  _a9a.csv  investigation.sh  investigation_single.sh  iter.csv  results.csv
likbench/: analysis.ipynb  bench.sh  output2.csv
outputs/krylov/native/: results.csv
outputs/krylov/native_interleave/: results.csv
outputs/krylov/sev/: results.csv
outputs/krylov/sev_interleave/: results.csv
outputs/krylov/sme/: results.csv
outputs/krylov/sme_interleave/: results.csv
outputs/spmv/native/: results.csv
outputs/spmv/native_interleave/: results.csv
outputs/spmv/sev/: results.csv
outputs/spmv/sev_interleave/: results.csv
outputs/spmv/sme/: results.csv
outputs/spmv/sme_interleave/: results.csv
outputs/spmv_numa_investigation/: resultsBIG.csv  resultsSMALL.csv
outputs/stream/: results.csv
scaling_test/: clifftest_synthgen2.sh  itertest.sh  testing_perf.sh
script_builder/src/: controller.py
script_builder/workloads/: add_multi_thread.c  sparse_csr_single_thread.c  sparse_minimal.c
src/: IO_Performance.cpp  controller.py  create_report.py  executor.py  gen_synth_mtx.sh  get_matrix.sh  get_spmc_mtx.sh  krylov.cpp  matgen.c  matgen.sh  matrix_generator.py  perf_util.hpp  preprocess_matrix.cpp  solve.cpp  spatial_regularity.cpp  spmv.cpp  spmv_analysis.ipynb  spmv_deep_analysis.cpp  spmv_deep_analysis_manual.cpp  synthgen.cpp  util.hpp  util_perf.hpp  visualize.py
src/analysis/: benchmark_analysis.ipynb
workloads/: add_single_thread.c  sample_bench.cpp  sparse_csr.c  sparse_minmal.c  sparse_openmp.c
workloads/builds/: sample_bench
